Fixed link colors at menu and footer, removed scrollbar at the bottom of the post, changed photo at contacts page

--- a/postcss/main.css
+++ b/postcss/main.css
@@ -72,7 +72,7 @@ header, main {
 
 /* header stuff */
 
-.logo {
+a.logo {
 	font-size: 1.8rem;
 	color: #333;
 	display: block;
@@ -101,7 +101,7 @@ header, main {
 	color: #aeaeae;
 }
 
-.menu-link {
+a.menu-link {
 	color: #aeaeae;
 	font-size: 1.4rem;
 	text-decoration: none;
@@ -130,7 +130,6 @@ code, tt {
 }
 
 pre {
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0 0 1.75em 0;
     border: #E3EDF3 1px solid;
@@ -139,7 +138,6 @@ pre {
     white-space: pre-wrap;
     overflow: auto;
     background: #F7FAFB;
-    border-radius: 3px;
 }
 
 pre code, tt {
@@ -163,10 +161,6 @@ h2 > a {
 	color: #aeaeae;
 }
 
-.post {
-	overflow-x: scroll;
-}
-
 .prev a, 
 .next a {
 	color: #aeaeae;
@@ -188,11 +182,18 @@ h2 > a {
 }
 
 /* footer */
-footer a {
+a.copy {
 	color: #aeaeae;
 	text-decoration: none;
 	
 	&:hover {
 		text-decoration: underline;
 	};
+}
+
+/* contacts page */
+.avatar {
+	max-width:100% !important;
+  height:auto;
+  display:block;
 }
