--- a/postcss/syntax.css
+++ b/postcss/syntax.css
@@ -1,6 +1,5 @@
 /* taken from kasper theme https://github.com/rosario/kasper/blob/master/_sass/_syntax.scss */
 .highlight {
-	background: #ffffff;
 	.c { color: #999988; font-style: italic } /* Comment */
 	.err { color: #a61717; background-color: #e3d2d2 } /* Error */
 	.k { font-weight: bold } /* Keyword */
